--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="done_button">Готов</string>
     <string name="add_button">Добавить</string>
     <string name="add_review_button">Написать отзыв</string>
+    <string name="show_all_review_text">Показать все отзывы</string>
 
     <string name="specifications">Характеристики</string>
     <string name="reviews">Отзывы</string>
@@ -41,4 +42,10 @@
 
     <string name="string_search">Поиск</string>
     <string name="string_select_product">Подобор лекарств</string>
+    <string name="text_no_reviews">Отзывово о данном товаре пока нет</string>
+    <string name="new_review">Новый отзыв</string>
+    <string name="send_review">Отправить</string>
+    <string name="text_name">Имя</string>
+    <string name="basic_text_name">Имя</string>
+    <string name="basic_text_message">Комментарий</string>
 </resources>
