--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">DisMobileProject</string>
-    <string name="title_home">Home</string>
-    <string name="title_category">Category</string>
-    <string name="title_profile">Profile</string>
+
+    <string name="title_home">Главная</string>
+    <string name="title_category">Каталог</string>
+    <string name="title_profile">Профиль</string>
     <string name="title_search">Search</string>
     <string name="title_products">Products</string>
     <string name="title_product_detail">ProductDetail</string>
