--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="text_name">Имя</string>
     <string name="basic_text_name">Имя</string>
     <string name="basic_text_message">Комментарий</string>
+    <string name="filters">Фильтры</string>
 </resources>
