--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,11 @@
     <string name="basic_text_name">Имя</string>
     <string name="basic_text_message">Комментарий</string>
     <string name="filters">Фильтры</string>
+
+    <string name="description_selection_function">
+        Функция подбора помогает выбрать подходящие товары по выбраным критериям.\n   Необходимо выбрать один основной критерий и хотя бы два дополнительных.
+    </string>
+    <string name="not_autorixation_text">
+        Для использования всех функций приложения необходимо войти в аккаунт
+    </string>
 </resources>
