--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,9 +49,15 @@
     <string name="filters">Фильтры</string>
 
     <string name="description_selection_function">
-        Функция подбора помогает выбрать подходящие товары по выбраным критериям.\n   Необходимо выбрать один основной критерий и хотя бы два дополнительных.
+        Функция подбора помогает выбрать подходящие товары по выбраным критериям.\n   Необходимо выбрать один основной критерий и хотя бы один дополнительный.
     </string>
     <string name="not_autorixation_text">
         Для использования всех функций приложения необходимо войти в аккаунт
     </string>
+    <string name="pharmacy_description">
+       "   " "Аптека \"Аптека\" - лучшее место для покупки лекарственных препаратов и медицинских товаров в городе. Наша аптека находится в центре города, в здании городской поликлиники № 3, что позволяет быстро и удобно купить необходимые медикаменты после посещения врача.\n" "   " "В ассортименте аптеки более 600 наименований лекарственных препаратов, витаминов, бадов и медицинских изделий, в том числе производства местных и зарубежных производителей. Здесь вы найдете препараты от ведущих фармацевтических компаний: Bayer, Novartis, Sanofi, Pfizer, Тева, Акрихин, Русполимед и других. Ежедневно аптека осуществляет прием заказов на лекарства и медицинские принадлежности, что позволяет вам быстро получить необходимый препарат.\n" "  " "Аптека \"Аптека\" предоставляет широкий спектр услуг: оказание консультаций по подбору необходимых лекарственных средств, проведение экспресс-тестов, проверку давления и замер температуры, а также продажу медицинских изделий – комфортных и удобных пульсоксиметров, термометров и кровяных сахарметров.
+    </string>
+    <string name="contact_information">Название компании: ООО \"Аптека\"\nАдрес: г. Москва, ул. Ленина, дом 10, офис 210\nТелефон: +7 (495) 123-45-67\nЭлектронная почта: apteka@apteka.ru
+    </string>
+
 </resources>
